partial compatibility done remains a few layout bugs

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -42,36 +42,6 @@ input[type=text] {
     border: 1px solid #3a3e41;
 }
 
-#play {
-    position: relative;
-    border: 2px solid #009be3;
-    background-color: white;
-    background-color: rgba(255, 255, 255, 0.6);
-    width: 300px;
-    min-height: 100px;
-    box-shadow: 0px 0px 5px #009be3;
-    --moz-border-radius: 5px;
-    border-radius: 5px;
-}
-
-#play audio {
-    position: absolute;
-    bottom: 0;
-}
-
-#play #playlist, #play #playlist a {
-    text-decoration: none;
-    color: gray;
-}
-
-#play #playlist {
-    padding-bottom: 32px;
-}
-
-#play #playlist .active {
-    color: green;
-}
-
 dt {
     display: none;
 }
@@ -85,7 +55,7 @@ dd {
     display: inline;
 }
 
-#play {
+#jp_container_1 {
     position: absolute;
     right: 0px;
     top: 0px;
